force-app/main/default/objects/Snapshot__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <label>Deployment</label>
    <type>Lookup</type>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Snapshots</relationshipLabel>
    <relationshipName>Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>