force-app/main/default/objects/Snapshot__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Lookup</type>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Snapshots</relationshipLabel>
    <relationshipName>Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>