force-app/main/default/objects/Snapshot__c/fields/Is_Restorable__c.field-meta.xml
<CustomField>
    <fullName>Is_Restorable__c</fullName>
    <label>Is Restorable</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>