force-app/main/default/objects/Snapshot__c/fields/Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days__c</fullName>
    <label>Retention Days</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>