force-app/main/default/objects/Snapshot__c/fields/Size_MB__c.field-meta.xml
<CustomField>
    <fullName>Size_MB__c</fullName>
    <label>Size MB</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>