force-app/main/default/objects/Snapshot__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Full</fullName><default>false</default><label>Full</label></value>
            <value><fullName>Incremental</fullName><default>false</default><label>Incremental</label></value>
            <value><fullName>PreDeploy</fullName><default>false</default><label>PreDeploy</label></value>
            <value><fullName>PostDeploy</fullName><default>false</default><label>PostDeploy</label></value>
            <value><fullName>Manual</fullName><default>false</default><label>Manual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>